@@ -241,6 +241,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15388) Title of Special:PrefixIndex
 * Links with no title but a curid parameter now use the curid to pick a page
 * (bug 10323) Special:Undelete should have "inverse selection" button
+* (bug 15831) Modern skin RTL support is bugous
 
 === API changes in 1.14 ===
 
